# MyPaint

./: .gitmodules  CMakeLists.txt  LICENSES  README  README.md
MyPaint/: CMakeLists.txt  mypaint.cpp  mypaint.h  mypaint_api.h
MyPaint/dirtools/: dirtools.cpp  dirtools.h
MyPaint/event_manager/: eventmanager.cpp  eventmanager.h  events.h  eventsubscriber.h
MyPaint/image/: image.cpp  image.h
MyPaint/image_formats/: loader.h
MyPaint/plugin_loaders/: pluginLoader.cpp  pluginLoader.h
MyPaint/tools/: tool.h
MyPaintDefaultTools/: CMakeLists.txt  main.cpp  main.h
MyPaintDefaultTools/image_formats/: tgaLoader.cpp  tgaLoader.h
MyPaintDefaultTools/tools/: toolEllipse.cpp  toolEllipse.h  toolLine.cpp  toolLine.h  toolRectangle.cpp  toolRectangle.h
MyPaintGUI/: CMakeLists.txt  main.cpp  mypaintgui.cpp  mypaintgui.h
MyPaintPluginPen/: CMakeLists.txt  main.cpp  plugin_api.h
MyPaintPluginPen/tools/: toolPen.cpp  toolPen.h
